# scinumtools3

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TODO.org  codecov.yml  conanfile.py  pyproject.toml  requirements.txt  settings.env  setup.sh
apps/: CMakeLists.txt
apps/dip/: CMakeLists.txt
apps/dip/dip/: CMakeLists.txt  main.cpp  main.h
apps/dmap/: README.md  main.cpp
apps/puq/: CMakeLists.txt
apps/puq/dmap/: CMakeLists.txt  main.cpp
apps/puq/puq/: CMakeLists.txt  displays.cpp  main.cpp  main.h
apps/snt/: CMakeLists.txt  README.md  argparser.cpp  argparser.h  main.cpp  main.h  main_dip.cpp  main_puq.cpp  module_dip.cpp  module_puq.cpp
apps/snt-dmap/: CMakeLists.txt  README.md  main.cpp
apps/snt-gui/: CMakeLists.txt  main.cpp
apps/snt-server/: CMakeLists.txt  main.cpp  settings.h
apps/snt/dip/: main.cpp  main.h
apps/snt/puq/: commands.cpp  commands.h  displays.cpp  displays.h  main.cpp  main.h
apps/snt/quick_example/: main.cpp
benchmarks/: CMakeLists.txt
benchmarks/comparison_pypuq/: compare.py  project.toml  pyproject.toml
benchmarks/comparison_pypuq/comparison_pypuq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
benchmarks/puq/: puq_benchmark.cpp
bindings/python/: README.md  pyproject.toml
bindings/python/cpp/: CMakeLists.txt  scinumtools3.cpp
bindings/python/tests/: conftest.py
examples/exs/DefaultSolver/: CMakeLists.txt  main.cpp
gtest/: CMakeLists.txt
gtest/dip/: CMakeLists.txt  fixtures.h  pch_tests.h  test_branching.cpp  test_expressions.cpp  test_functions.cpp  test_hierarchy.cpp  test_modifications.cpp  test_parse_arrays.cpp  test_parse_dimensions.cpp  test_parse_dip.cpp  test_parse_scalars.cpp  test_parse_strings.cpp  test_parse_tables.cpp  test_properties.cpp  test_references.cpp  test_references_raw.cpp  test_slicing.cpp  test_solver_logical.cpp  test_solver_numerical.cpp  test_solver_template.cpp  test_source_list.cpp  test_unit_list.cpp  test_units.cpp
gtest/exs/: CMakeLists.txt  examples_test.cpp  expression_test.cpp  operators_test.cpp  pch_tests.h  solver_test.cpp  tokens_test.cpp
gtest/mat/: pch_tests.h  test_element.cpp  test_substance.cpp  test_substance_solver.cpp
gtest/puq/: CMakeLists.txt  array_test.cpp  base_units_test.cpp  calculator_test.cpp  converter_test.cpp  data_table_test.cpp  dimensions_test.cpp  exponent_test.cpp  lists_test.cpp  magnitude_test.cpp  nostd_test.cpp  pch_tests.h  quantity_test.cpp  unit_atom_test.cpp  unit_format_test.cpp  unit_solver_test.cpp  unit_system_test.cpp  unit_value_test.cpp
gtest/snt/: number_format_test.cpp  string_format_test.cpp
gtest/val/: CMakeLists.txt  pch_tests.h  test_casting.cpp  test_comparison.cpp  test_definition.cpp  test_math.cpp  test_quantifiers.cpp  test_slicing.cpp  test_values.cpp
pybind/: CMakeLists.txt  scinumtools3.cpp
pybind/cmake/: FindPytest.cmake  Pytest.cmake
pybind/dip/: CMakeLists.txt  bind_dip_module.cpp  bind_environment.cpp  bind_main.cpp  bind_value_node.cpp
pybind/puq/: CMakeLists.txt  bind_lists.cpp  bind_main.cpp  bind_quantity.cpp  bind_system.cpp  bind_unit_system.cpp
pybind/snt/: CMakeLists.txt
src/: CMakeLists.txt  settings.h  val.h
src/dip/: CMakeLists.txt  dip.cpp  dip.h  environment.cpp  environment.h  helpers.h  parsers.cpp  parsers.h  settings.h
src/dip/lists/: list_branching.cpp  list_functions.cpp  list_hierarchy.cpp  list_node.cpp  list_source.cpp  list_unit.cpp  lists.h
src/dip/nodes/: node.cpp  node_base.cpp  node_boolean.cpp  node_case.cpp  node_empty.cpp  node_float.cpp  node_group.cpp  node_import.cpp  node_integer.cpp  node_modification.cpp  node_property.cpp  node_quantity.cpp  node_source.cpp  node_string.cpp  node_table.cpp  node_unit.cpp  node_value.cpp  nodes.h  parser.cpp
src/dip/solvers/: solver_logical.cpp  solver_numerical.cpp  solvers.h
src/dip/values/: values_array.h  values_scalar.h
src/exs/: CMakeLists.txt  atom.h  atom_list.h  expression.h  exs.h  operator_base.h  operator_group.h  operator_list.h  operator_ternary.h  operators.h  pch_exs.h  settings.h  solver.h  step_list.h  token.h  token_list.h  token_list_base.h
src/exs/branching/: condition.h  parentheses.h
src/exs/comparison/: equal.h  greater.h  greater_equal.h  less.h  less_equal.h  not_equal.h
src/exs/logical/: and.h  not.h  or.h
src/exs/math/: add.h  cosinus.h  cubic_root.h  divide.h  exponent.h  logarithm.h  logarithm_10.h  logarithm_base.h  modulo.h  multiply.h  power.h  (+5 more)
src/mat/: CMakeLists.txt  composite.cpp  composite.h  element.cpp  element.h  material.cpp  material.h  material_solver.cpp  material_solver.h  matter.cpp  matter.h  periodic_table.h  substance.cpp  substance.h  substance_solver.cpp  substance_solver.h
src/puq/: CMakeLists.txt  array.cpp  array.h  config.h  converter.cpp  converter.h  exponent.cpp  exponent.h  lists.cpp  lists.h  magnitude.cpp  magnitude.h  pch_puq.h  puq.h  quantity.cpp  quantity.h  settings.h  unit_format.cpp  unit_format.h
src/snt/: CMakeLists.txt  dip.h  exs.h  puq.h  settings.h  string_format.h
src/val/: CMakeLists.txt  array.h  datatypes.cpp  datatypes.h  pch_val.h  settings.h  val.h  value_base.h  values.cpp  values.h  values_array.cpp  values_array.h  values_array_bool.cpp  values_array_string.cpp  values_boolean.cpp  values_boolean.h  values_complex.h  values_number.h  values_scalar.h  values_string.cpp  values_string.h
tests/api/: CMakeLists.txt  dip_commands.cpp  puq_commands.cpp
tests/cli/: CMakeLists.txt  dip_commands.cpp  puq_commands.cpp  puq_test.cpp
tests/exs/: CMakeLists.txt  examples_test.cpp  expression_test.cpp  operators_test.cpp  pch_tests.h  solver_test.cpp  test_solver.cpp  test_tokens.cpp  tokens_test.cpp
tests/mat/: CMakeLists.txt  test_element.cpp  test_substance.cpp  test_substance_solver.cpp
tests/snt/: CMakeLists.txt  string_format_test.cpp
tests/val/: CMakeLists.txt  pch_tests.h  test_casting.cpp  test_comparison.cpp  test_definition.cpp  test_math.cpp  test_quantifiers.cpp  test_slicing.cpp
(+1517 files in other folders)
