[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11>=2.11.0",
    "setuptools",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "scinumtools3"
version = "v0.4.9"
description = "Python bindings for the scinumtools3 C++ core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ondrej Pego Jaura", email = "vrtulka23@pm.me" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "mypy",
    "black",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/vrtulka23/scinumtools3"
Repository = "https://github.com/vrtulka23/scinumtools3"
Issues = "https://github.com/vrtulka23/scinumtools3/issues"

# ------------------------
# scikit-build-core config
# ------------------------

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.24"
build.verbose = true
wheel.expand-macos-universal-tags = true

# Where the python package lives
wheel.packages = ["bindings/python/src/scinumtools3"]

# This tells scikit-build where CMakeLists.txt is
cmake.source-dir = "./"

[tool.cibuildwheel]

build = "cp311-* cp312-* cp313-*"

test-command = """
python -c "import scinumtools3"
"""

[tool.cibuildwheel.linux]

before-build = "pip install pybind11"

# ------------------------
# CMake configuration
# ------------------------

[tool.scikit-build.cmake.define]
ENABLE_SNT = "ON"
ENABLE_SNT_GTEST = "OFF"
ENABLE_SNT_PYBIND = "ON"
ENABLE_SNT_PYTEST = "OFF"
ENABLE_EXS = "ON"
ENABLE_EXS_GTEST = "OFF"
ENABLE_EXS_PYBIND = "ON"
ENABLE_EXS_PYTEST = "OFF"
ENABLE_VAL = "ON"
ENABLE_VAL_GTEST = "OFF"
ENABLE_VAL_PYBIND = "ON"
ENABLE_VAL_PYTEST = "OFF"
ENABLE_PUQ = "ON"
ENABLE_PUQ_GTEST = "OFF"
ENABLE_PUQ_PYBIND = "ON"
ENABLE_PUQ_PYTEST = "OFF"
ENABLE_DIP = "ON"
ENABLE_DIP_GTEST = "OFF"
ENABLE_DIP_PYBIND = "ON"
ENABLE_DIP_PYTEST = "OFF"
ENABLE_MAT = "OFF"
ENABLE_MAT_GTEST = "OFF"
ENABLE_MAT_PYBIND = "OFF"
ENABLE_MAT_PYTEST = "OFF"

# ------------------------
# pytest config
# ------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

# ------------------------
# formatting / linting
# ------------------------

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true