# add submodule directories
if (ENABLE_PUQ AND ENABLE_DIP)
   add_subdirectory(snt)
endif()
if (ENABLE_PUQ AND ENABLE_EXEC_APPS_DMAP)
   add_subdirectory(snt-dmap)
endif()
if (ENABLE_EXEC_APPS_SERVER)
   add_subdirectory(snt-server)
endif()
if (ENABLE_EXEC_APPS_GUI)
   add_subdirectory(snt-gui)
endif()
