# add submodule tests
if (COMPILE_SNT AND COMPILE_GTESTS_SNT)
   add_subdirectory(snt)
endif()
if (COMPILE_EXS AND COMPILE_GTESTS_EXS)
   add_subdirectory(exs)
endif()
if (COMPILE_VAL AND COMPILE_GTESTS_VAL)
   add_subdirectory(val)
endif()
if (COMPILE_PUQ AND COMPILE_GTESTS_PUQ)
   add_subdirectory(puq)
endif()
if (COMPILE_DIP AND COMPILE_GTESTS_DIP) 
   add_subdirectory(dip)  
endif()
if (COMPILE_MAT AND COMPILE_GTESTS_MAT) 
   add_subdirectory(mat)  
endif()
