# add submodule tests
if (ENABLE_SNT AND ENABLE_SNT_GTEST)
   add_subdirectory(snt)
endif()
if (ENABLE_EXS AND ENABLE_EXS_GTEST)
   add_subdirectory(exs)
endif()
if (ENABLE_VAL AND ENABLE_VAL_GTEST)
   add_subdirectory(val)
endif()
if (ENABLE_PUQ AND ENABLE_PUQ_GTEST)
   add_subdirectory(puq)
endif()
if (ENABLE_DIP AND ENABLE_DIP_GTEST) 
   add_subdirectory(dip)  
endif()
if (ENABLE_MAT AND ENABLE_MAT_GTEST) 
   add_subdirectory(mat)  
endif()
