# add submodule libraries
if (COMPILE_SNT)
   add_subdirectory(snt)
endif()
if (COMPILE_EXS)
   add_subdirectory(exs)
endif()
if (COMPILE_VAL)
   add_subdirectory(val)
endif()
if (COMPILE_PUQ)
   add_subdirectory(puq)
endif()
if (COMPILE_DIP) 
   add_subdirectory(dip)	 
endif()
if (COMPILE_MAT)
   add_subdirectory(mat)
endif()
