[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11>=2.11.0",
    "cmake>=3.24",
    "ninja",
    "setuptools",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "scinumtools3"
version = "v0.3.0"
description = "Python bindings for the scinumtools3 C++ core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ondrej Pego Jaura", email = "vrtulka23@pm.me" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "mypy",
    "black",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/vrtulka23/scinumtools3"
Repository = "https://github.com/vrtulka23/scinumtools3"
Issues = "https://github.com/vrtulka23/scinumtools3/issues"

# ------------------------
# scikit-build-core config
# ------------------------

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.24"
cmake.verbose = true
wheel.expand-macos-universal-tags = true

# Where the python package lives
wheel.packages = ["scinumtools3"]

# This tells scikit-build where CMakeLists.txt is
cmake.source-dir = "cpp"

# ------------------------
# CMake configuration
# ------------------------

[tool.scikit-build.cmake.define]
PYTHON_BINDINGS = "ON"
SCINUMTOOLS3_PYTHON = "ON"

# ------------------------
# pytest config
# ------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

# ------------------------
# formatting / linting
# ------------------------

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true